Basic interactive calendar functionality implemented.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^0.21.1",
     "clsx": "latest",
     "react": "latest",
+    "react-calendar": "^3.4.0",
     "react-chartjs-2": "^3.0.3",
+    "react-datepicker": "^4.1.1",
     "react-dom": "latest",
     "react-router-dom": "^5.2.0",
     "react-scripts": "latest",
