--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "clsx": "latest",
+    "puppeteer": "^10.0.0",
     "react": "latest",
     "react-calendar": "^3.4.0",
     "react-chartjs-2": "^3.0.3",
