--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "clsx": "latest",
+    "mime": "^1.6.0",
     "react": "latest",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "latest",
     "react-router-dom": "^5.2.0",
     "react-scripts": "latest",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "styled-components": "^5.3.0"
   },
   "browserslist": {
     "production": [
