--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "clsx": "latest",
+    "material-ui-image": "^3.3.2",
     "mime": "^1.6.0",
     "react": "latest",
     "react-chartjs-2": "^3.0.3",
