--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react": "latest",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "latest",
+    "react-dropdown-select": "^4.7.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "latest",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3"
   },
   "browserslist": {
     "production": [
