--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
-
-
-{    
+{
   "name": "create-react-app",
   "version": "4.0.0",
   "private": true,
@@ -9,13 +7,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "chart.js": "^3.4.0",
     "clsx": "latest",
     "puppeteer": "^10.0.0",
     "react": "latest",
