--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "chart.js": "^3.4.1",
     "clsx": "latest",
     "react": "latest",
-    "react-chartjs-2": "^3.0.3",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "latest",
     "react-dropdown-select": "^4.7.4",
     "react-router-dom": "^5.2.0",
