--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-scripts": "latest",
     "recharts": "^2.0.9",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3"
+    "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.0"
   },
   "browserslist": {
