--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.1",
     "@material-ui/core": "latest",
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.1",
     "axios": "^0.21.1",
     "chart.js": "^3.5.0",
     "clsx": "latest",
