--- a/package.json
+++ b/package.json
@@ -9,27 +9,37 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@babel/core": "^7.15.5",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "latest",
     "@material-ui/data-grid": "*",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.0",
+    "@mui/x-data-grid": "^4.0.0",
     "axios": "^0.21.1",
+    "browserslist": "^4.17.0",
     "chart.js": "^3.5.0",
     "clsx": "latest",
     "material-ui-image": "^3.3.2",
     "mime": "^1.6.0",
+    "npm-check-updates": "^11.8.5",
     "puppeteer": "^10.0.0",
-    "react": "latest",
+    "react": "^16.14.0",
     "react-calendar": "^3.4.0",
     "react-chartjs-2": "^3.0.4",
     "react-datepicker": "^4.1.1",
+    "react-dev-utils": "^11.0.4",
     "react-dom": "latest",
     "react-dropdown-select": "^4.7.4",
+    "react-image-gallery": "^1.2.7",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "latest",
+    "react-scripts": "^4.0.3",
     "recharts": "^2.1.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "typescript": "^2.9.2"
   },
   "browserslist": {
     "production": [
